hphp/test/zend/good/ext/standard/tests/math/pi_basic.php
<?php
ini_set('precision', 14);

echo pi(), "\n";
echo M_PI, "\n";
// N.B pi() ignores all specified arguments no error 
// messages are produced if arguments are spcified. 
?>